# scaffold

./: .gitignore  LICENCE  README.md  main.py
dogtor/: pyproject.toml
dogtor/dogtor/: env.py  project.py  utils.py
dogtor/tests/: test_env.py  test_project.py
